# cpp-starter

./: CMakeLists.txt  run.sh
src/: main.cpp
